--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
+    "@react-native-community/netinfo": "^5.7.1",
     "@react-navigation/drawer": "^5.0.7",
     "@react-navigation/native": "^5.0.7",
     "@react-navigation/stack": "^5.0.8",
+    "aws-amplify": "^3.0.8",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.6.0",
